// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagenesInput se renderiza en modo horizontal 1`] = `
<View
  style={
    {
      "marginBottom": 10,
    }
  }
>
  <Text
    style={
      {
        "fontWeight": "bold",
        "marginBottom": 5,
      }
    }
  >
    Imágenes
  </Text>
  <RCTScrollView
    horizontal={true}
    style={
      {
        "marginBottom": 10,
      }
    }
  >
    <View>
      <Image
        source={
          {
            "uri": "https://test/1.png",
          }
        }
        style={
          {
            "borderRadius": 5,
            "height": 80,
            "marginRight": 10,
            "width": 80,
          }
        }
      />
      <Image
        source={
          {
            "uri": "https://test/2.png",
          }
        }
        style={
          {
            "borderRadius": 5,
            "height": 80,
            "marginRight": 10,
            "width": 80,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4CAF50",
        "borderRadius": 5,
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontWeight": "bold",
        }
      }
    >
      Agregar Imagen
    </Text>
  </View>
</View>
`;

exports[`ImagenesInput se renderiza en modo vertical 1`] = `
<View
  style={
    {
      "marginBottom": 10,
    }
  }
>
  <Text
    style={
      {
        "fontWeight": "bold",
        "marginBottom": 5,
      }
    }
  >
    Imágenes
  </Text>
  <RCTScrollView
    horizontal={false}
    style={
      {
        "marginBottom": 10,
      }
    }
  >
    <View>
      <Image
        source={
          {
            "uri": "a",
          }
        }
        style={
          {
            "borderRadius": 5,
            "height": 80,
            "marginRight": 10,
            "width": 80,
          }
        }
      />
      <Image
        source={
          {
            "uri": "b",
          }
        }
        style={
          {
            "borderRadius": 5,
            "height": 80,
            "marginRight": 10,
            "width": 80,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#4CAF50",
        "borderRadius": 5,
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#fff",
          "fontWeight": "bold",
        }
      }
    >
      Agregar Imagen
    </Text>
  </View>
</View>
`;
